apps/infrastructure/traefik/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    name: traefik
    app.kubernetes.io/name: traefik
    app.kubernetes.io/part-of: infrastructure
