apps/infrastructure/traefik/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/part-of: infrastructure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.wrenspace.dev`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
      - name: api@internal
        kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls
